24/01/2017, interfaz modificada. Error cuando intenta escribir en sd, no coge los permisos

--- a/Camara2/app/src/main/res/values/strings.xml
+++ b/Camara2/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
   -->
 
 <resources>
-    <string name="app_name">Android Hidden Camera</string>
+    <string name="app_name">Timelapse Parato</string>
+    <string name="title_button_service">Lanzar servicio</string>
 </resources>
