30/01/2017, Fragment de preferencias implementado

--- a/Camara2/app/src/main/res/values/strings.xml
+++ b/Camara2/app/src/main/res/values/strings.xml
@@ -17,4 +17,16 @@
 <resources>
     <string name="app_name">Timelapse Parato</string>
     <string name="title_button_service">Lanzar servicio</string>
+    <string name="settings">Ajustes</string>
+    <string name="title_bateria_frecuencia">Batería-Frecuencia</string>
+    <string name="title_memoria_calidad">Memoria-Calidad</string>
+    <string name="title_preferencias">Preferencias guardadas:</string>
+    <string name="title_bateria">Nivel de batería</string>
+    <string name="title_frecuencia">Frecuencia de fotos</string>
+    <string name="title_memoria">Memoria restante</string>
+    <string name="title_calidad">Calidad de foto</string>
+    <string name="summary_calidad">Controlar la calidad con la que se harán las fotos</string>
+    <string name="summary_memoria">Controlar memoria restante para calidad de fotos</string>
+    <string name="summary_frecuencia">Frecuencia con las que se harán las fotos</string>
+    <string name="summary_bateria">Nivel de batería al que quieras que se haga una acción</string>
 </resources>
