--- a/Camara2/app/src/main/res/values/strings.xml
+++ b/Camara2/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="summary_memoria">Controlar memoria restante para calidad de fotos</string>
     <string name="summary_frecuencia">Frecuencia con las que se harán las fotos</string>
     <string name="summary_bateria">Nivel de batería al que quieras que se haga una acción</string>
+    <string name="title_button_stop_service">Parar servicio</string>
 </resources>
