--- a/Camara2/app/src/main/res/values/strings.xml
+++ b/Camara2/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
   -->
 
 <resources>
-    <string name="app_name">Timelapse TrianaSat</string>
+    <string name="app_name">Timelapse</string>
     <string name="title_button_service">Lanzar servicio</string>
     <string name="settings">Ajustes</string>
     <string name="title_bateria_frecuencia">Batería-Frecuencia</string>
@@ -33,4 +33,7 @@
     <string name="title_total_fotos">Total fotos</string>
     <string name="title_num_fotos">Número de fotos</string>
     <string name="summary_num_fotos">Número total de fotos que hará la aplicación</string>
+    <string name="ok">Ok</string>
+    <string name="tiene_codigo_valido">Proyecto no encontrado</string>
+    <string name="dar_alta_proyecto">¿Tiene un código válido? Acceda a su panel de configuración del proyecto en </string>
 </resources>
